tests/should_fail/ghost/control_flow.stderr
error: cannot use `return` in ghost code
 --> control_flow.rs:8:9
  |
8 |         return;
  |         ^^^^^^
  |
  = note: control flow cannot escape the `ghost!` block

error: cannot use `return` in ghost code
  --> control_flow.rs:14:9
   |
14 |         return 42;
   |         ^^^^^^^^^
   |
   = note: control flow cannot escape the `ghost!` block

error: cannot use `break` in ghost code
  --> control_flow.rs:21:13
   |
21 |             break;
   |             ^^^^^
   |
   = note: control flow cannot escape the `ghost!` block

error: cannot use `continue` in ghost code
  --> control_flow.rs:29:13
   |
29 |             continue;
   |             ^^^^^^^^
   |
   = note: control flow cannot escape the `ghost!` block

error: aborting due to 4 previous errors

